--- a/_config.yml
+++ b/_config.yml
@@ -148,7 +148,7 @@ content:
 
       - layout: top-middle
         title: 신한카드
-        caption: 2022.03 ~ 현재
+        caption: 2019.01 ~ 2022.03
 
       - layout: left
         title: 데이터 비교 및 이관 서비스 개발
