update : resume update

--- a/_config.yml
+++ b/_config.yml
@@ -260,7 +260,7 @@ content:
       - 1일 1알고리즘 풀기 챌린지(레벨 2에서는 더 이상 풀 문제가 없어서 잠시 쉬는 중)를 하여 2023년 9월 11일 기준 프로그래머스 알고리즘 테스트 순위 790위 입니다
       - 개발하는 것을 좋아하여 한창 집중 할 때에는 꿈을 꾸면서도 프로젝트 설계를 하고 아침에 "유레카" 를 외치며 일어날 때 뿌듯해 합니다
       - 같은 백엔드 개발자인 와이프와 함께 개발에 관하여 이야기 하는 것을 좋아합니다.(와이프가 좋아하지는 않는 것 같습니다)
-      - 책읽는 것을 좋아하지만, 잘 읽지 않는 게으른 저를 위해 최근에 태블릿 거치대(태블릿 거치대 짱입니다 신세계)를 구매하여 침대맡에 두고 하루 최소 1페이지 읽기 챌린지를 진행중입니다 
+      - 책읽는 것을 좋아하지만, 잘 읽지 않는 게으른 저를 위해 최근에 태블릿 거치대를 구매하여 침대맡에 두고 하루 최소 1페이지 읽기 챌린지를 진행중입니다 
       - 스킨스쿠버(장비 다있음), 캠핑(장비 다있음) 및 여행 등 밖으로 돌아다니는 활동도 좋아합니다. (장비빨 최고)
 
 
