--- a/_config.yml
+++ b/_config.yml
@@ -210,7 +210,7 @@ content:
       - layout: left
         title: 성능테스트와 인프라
         quote: >
-          AWS Proserver 팀과 성능테스트를 진행하며 겪은 경험
+          AWS Proserve 팀과 성능테스트를 진행하며 겪은 경험
         description: | # this will include new lines to allow paragraphs
           - 기존 방식
             - tps 정도의 목표값을 정한 후 부하를 올리며 목적에 맞는 tps 도달하면 성능 테스트 성공
