update : resume update

--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ about_content: | # this will include new lines to allow paragraphs
 
   주 스킬
   - <mark>Java</mark>
-  - <mark>Spring Boot</mark> <mark>Junit</mark> <mark>Spring REST Docs</mark> <mark>Spring Data JPA</mark> <mark>Spring Cloud</mark>
-  - <mark>Oracle</mark> <mark>MongoDB</mark> <mark>Memcached</mark> <mark>Redis</mark>  <mark>Apache Kafka</mark>
+  - <mark>Spring Boot</mark> <mark>Junit</mark> <mark>Spring REST Docs</mark> <mark>Spring Data JPA</mark> <mark>Spring Cloud</mark> <mark>Spring Batch</mark>
+  - <mark>Oracle</mark> <mark>MongoDB</mark> <mark>Memcached</mark> <mark>Redis</mark>  <mark>Apache Kafka</mark> <mark>PostgreSQL</mark>
 
 content:
   - title: Career # Title for the section
@@ -50,10 +50,10 @@ content:
     content:
       - layout: left
         title: Tving
-        caption: 2022.03 ~ 현재
+        caption: 2022.03 ~ 2024.02
         sub_title: Backend Developer
         quote: >
-          회원 서비스 개발
+          회원, 정산 서비스 개발
         description: | # this will include new lines to allow paragraphs 
           - 개발 문화 개선 
           - AWS Proserve를 진행하며, 서비스의 Cloud화 진행
@@ -78,11 +78,26 @@ content:
     content:
       - layout: top-middle
         title: Tving
-        caption: 2022.03 ~ 현재
+        caption: 2022.03 ~ 2024.02
+
+      - layout: left
+        title: 정산 서비스 개발
+        caption: 2023.11 ~ 2024.02
+        quote: >
+          개인화 정산 데이터 설계 및 개발
+        description: | # this will include new lines to allow paragraphs
+          - 도입 전
+            - 유저별 정산 데이터가 없어서, 개인화 정산 불가능
+          - 도입 후
+            - 유저별 정산 데이터를 생성하여, 개인화 정산 수행 1년 기준 약 700억원의 수익 예상
+          - 도입 과정
+            - 개인화 정산을 위한 데이터 설계, 프로젝트 설계 및 개발
+              - CP(Contents Provider)의 많은 숫자로 인해 여러 개발자의 동시 개발을 위한 인터페이스 기반의 추상화 설계
+            - 대용량 데이터 처리를 위한 Spring Batch 개발 및 개선             
 
       - layout: left
         title: 카프카 서비스 도입
-        caption: 2023.09 ~ 현재
+        caption: 2023.09 ~ 2023.11
         quote: >
           대용량 트래픽 대응을 위한 변화과정
         description: | # this will include new lines to allow paragraphs
@@ -202,11 +217,25 @@ content:
           - 개인화 인터페이스 개발
             - 계정계 시스템 연동 인터페이스 설계 및 개발
 
-
-
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
+      - layout: left
+        title: Spring Batch 성능 개선
+        quote: >
+          개인화 정산을 위한 대용량 데이터 Spring Batch 개발
+        description: | # this will include new lines to allow paragraphs
+          - JPA Repository + Pagination 조합으로 서비스 개발
+            - 700만건 데이터 기준 12시간 이상의 수행 시간 소요
+          - Partitioning 추가
+            - 서비스 수행 시간 15분 이내로 단축 됨
+            - Partitioning 별로 DB connection을 유지하여 다량의 connection pool 소요
+            - Partitioning 위한 유저 번호 mod 쿼리를 수행하다 보니 쿼리 수행이 느림을 확인
+          - Partitioning 제거 및 JDBC + Cursor 방식 도입
+            - 서비스 수행 시간 3분 이내로 단축
+            - DB connection pool 가용량 확보
+            - mod 쿼리 제거로 인한 쿼리 수행 속도 상승
+
       - layout: left
         title: 성능테스트와 인프라
         quote: >
@@ -224,9 +253,9 @@ content:
             - DB 테스트 
               - DB 환경 설정(mongoDB readPreference, writeConcern 등) 변경에 따른 성능 테스트
               - oracle connection pool 1개당 tps 30정도의 대응 시간을 갖추고 있는 것을 파악 후 SLO에 적합한 connection 수 산정
-''
+
       - layout: left
-        title: 대용량 요청 처리를 위한 개발
+        title: 대용량 트래픽 처리
         quote: >
           대용량 요청이 들어오는 경우에 생기는 문제를 해결
         description: | # this will include new lines to allow paragraphs
